--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
 .top-nav {
 	height: 109px;
@@ -7,8 +7,9 @@
 	top: 0;
 	padding-top: 0px;
 	overflow-y: hidden;
-	background-color: #dbd5d5;
+	background-color: #ffffff;
 	box-shadow: -1px 13px 29px 0px rgba(0, 0, 0, 0.17);
+	z-index: 2;
 }
 
 .top-nav-navi {
@@ -25,12 +26,12 @@
 
 .top-nav-links-right a {
 	text-decoration: none;
-	color: #464646;
+	color: #707070;
 	display: inline-block;
 	font-size: 30px;
 	padding-right: 30px;
 	font-family: "Raleway", sans-serif;
-	font-weight: 600;
+	font-weight: 400;
 }
 
 .top-nav-links-right a:hover {
