--- a/frontend/src/Components/Schedule/TopWaveSection/TopWave.css
+++ b/frontend/src/Components/Schedule/TopWaveSection/TopWave.css
@@ -32,7 +32,7 @@
     left: 0;
     width: 100%;
     height: 100px;
-    background: url(../../Assets/wave.png);
+    background: url(../../../Assets/wave.png);
     background-size: 1000px 100px;
 }
 .wave1 {
