--- a/frontend/src/Components/Thoughts/Thoughts.css
+++ b/frontend/src/Components/Thoughts/Thoughts.css
@@ -16,3 +16,54 @@
 	margin-top: 177px;
 	margin-left: -75px;
 }
+
+.grey-circle4 {
+	width: 847px;
+	height: 843px;
+	border-radius: 100%;
+	background-color: rgba(206, 203, 216, 0.35);
+	margin-top: -400px;
+	margin-left: 1303px;
+}
+
+.th-img {
+	width: 200px;
+	height: 200px;
+	border-radius: 100%;
+	margin-left: 140px;
+}
+
+.th-text {
+	color: #464646;
+	font-family: "Raleway";
+}
+
+.name {
+	font-size: 25px;
+	font-weight: 600;
+}
+
+.descp {
+	font-size: 25px;
+	font-weight: medium;
+	font-style: italic;
+	margin-bottom: 86px;
+}
+
+.info {
+	width: 1336px;
+	text-align: justify;
+	font-size: 27px;
+	font-weight: medium;
+	margin-left: 100px;
+	position: absolute;
+	top: 25%;
+}
+
+.th-box-name-descp {
+	width: 230px;
+	height: 60px;
+	margin-top: 16px;
+	margin-left: 140px;
+	margin-bottom: 86px;
+}
