--- a/frontend/src/Components/TimeLine/TimeLine.css
+++ b/frontend/src/Components/TimeLine/TimeLine.css
@@ -1,4 +1,13 @@
 .timeline {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+
+/* .timeline {
     position: relative;
     width: 100%;
 }
@@ -23,20 +32,77 @@
     position: relative;
     box-sizing: border-box;
 }
+
+*/
 .item {
-    display: flex;
-    padding: 2vh;
+    display: grid;
+    grid-template-areas: "time left-container mid-container right-container";
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     padding-top: 0;
 }
 .time {
+    grid-area: time;
+    width: 10vh;
     margin: auto;
+    text-align: center;
     background-color: #efb822;
-    display: inline-block;
     font-size: 30px;
     border-radius: 20vh;
     padding: 1vh 2vh 1vh 2vh;
 }
+
 .description {
-    border-style: solid;
-    border-width: 1px;
+    border: 4px solid #707070;
+    border-radius: 30px;
+    margin: 5vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.description1 {
+    grid-area: left-container;
+}
+.description2 {
+    grid-area: mid-container;
+}
+.description3 {
+    grid-area: right-container;
+}
+
+.title {
+    padding: 1vh;
+}
+.details {
+}
+.speaker-name {
+    display: flex;
+    flex-direction: row;
+}
+.details-sm {
+    padding: 1vh;
+    min-width: 10vh;
+}
+.details-xm {
+    padding: 1vh;
+}
+.type {
+    display: flex;
+    flex-direction: row;
+}
+.btn-find-out-more {
+    text-align: center;
+    background-color: #efb822;
+    padding: 1vh;
+    border: 2px solid #464646;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 24px;
+    max-width: 25vh;
+    margin: 2vh;
+}
+.description-text {
+    padding: 2vh;
 }
