--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
 
 .top-nav {
 	height: 109px;
-	width: 100%;
+	width: 100vw;
 	position: fixed;
 	top: 0;
 	padding-top: 0px;
@@ -41,4 +41,27 @@
 
 .spacer {
 	flex: 1;
+}
+
+.icon-menu {
+	background-color: #ffffff;
+	outline: none;
+	border-style: none;
+	border-width: 0px;
+	color: #262626;
+	cursor: pointer;
+	margin-right: 10px;
+	margin-left: 10px;
+}
+
+@media (max-width: 500px) {
+	.top-nav-links-right {
+		display: none;
+	}
+}
+
+@media (min-width: 501px) {
+	.icon-menu {
+		display: none;
+	}
 }
