--- a/frontend/src/Components/AboutConference/AboutConference.css
+++ b/frontend/src/Components/AboutConference/AboutConference.css
@@ -1,9 +1,3 @@
-.img-conf {
-	width: 642px;
-	height: 642px;
-	border-radius: 100%;
-}
-
 .header-conf {
 	width: 506px;
 	height: 94px;
@@ -78,7 +72,7 @@
 	border-radius: 100%;
 	cursor: pointer;
 	transition: 0.5s;
-	margin-left: 22px;
+	margin: 10px;
 }
 
 .manual-btn:hover {
@@ -120,7 +114,7 @@
 	border-radius: 100%;
 	cursor: pointer;
 	transition: 0.5s;
-	margin-left: 22px;
+	margin: 10px;
 }
 
 #radio1:checked ~ .navigation-auto .auto-btn1 {
@@ -146,4 +140,58 @@
 #radio5:checked ~ .navigation-auto .auto-btn5 {
 	background-color: #ffffff;
 	transform: scale(1.5);
+}
+
+.about-full-screen {
+	display: flex;
+}
+
+@media (max-width: 500px) {
+	.slider {
+		width: 300px;
+		height: 300px;
+		margin-left: 30px;
+	}
+	.slide img {
+		width: 300px;
+		height: 300px;
+	}
+	.about-full-screen {
+		display: none;
+	}
+
+	.header-conf {
+		margin-left: 20px;
+		font-size: 45px;
+		width: 274px;
+		height: 50px;
+		margin-top: 80px;
+	}
+	.text-conf {
+		width: 320px;
+		margin-left: 20px;
+		text-align: left;
+		font-size: 20px;
+		margin-top: 40px;
+	}
+
+	.navigation-manual {
+		width: 300px;
+	}
+	.manual-btn {
+		width: 20px;
+		height: 20px;
+	}
+	.grey-circle {
+		margin-left: 10px;
+		margin-top: -270px;
+		width: 300px;
+		height: 300px;
+	}
+}
+
+@media (min-width: 501px) {
+	.about-mobile-screen {
+		display: none;
+	}
 }
