--- a/frontend/src/Components/Sponsors/Sponsors.css
+++ b/frontend/src/Components/Sponsors/Sponsors.css
@@ -26,3 +26,27 @@
 	margin-left: 132px;
 	margin-top: 78px;
 }
+
+@media (max-width: 500px) {
+	.spon-header {
+		width: 100vw;
+		height: 50px;
+		font-size: 45px;
+		margin-left: 0;
+		margin-top: -400px;
+	}
+	.spon-name {
+		font-size: 30px;
+		margin-top: 40px;
+	}
+
+	.spon-full-screen {
+		display: none;
+	}
+}
+
+@media (min-width: 501px) {
+	.spon-mobile-screen {
+		display: none;
+	}
+}
