--- a/frontend/src/Components/AboutConference/AboutConference.css
+++ b/frontend/src/Components/AboutConference/AboutConference.css
@@ -199,7 +199,31 @@
 	}
 }
 
-@media (min-width: 501px) {
+@media (min-width: 501px) and (max-width: 1000px) {
+	.header-conf {
+		margin-left: 0px;
+		font-size: 60px;
+		width: 100vw;
+		height: 50px;
+		margin-top: 80px;
+	}
+	.text-conf {
+		width: 90vw;
+		margin-left: 30px;
+		text-align: center;
+		font-size: 25px;
+		margin-top: 60px;
+	}
+	.slider {
+		margin-top: 80px;
+	}
+
+	.about-full-screen {
+		display: none;
+	}
+}
+
+@media (min-width: 1001px) {
 	.about-mobile-screen {
 		display: none;
 	}
