--- a/frontend/src/Components/Statistics/Statistics.css
+++ b/frontend/src/Components/Statistics/Statistics.css
@@ -97,7 +97,39 @@
 	}
 }
 
-@media (min-width: 501px) {
+@media (min-width: 501px) and (max-width: 1000px) {
+	.stat-header {
+		width: 100vw;
+		height: 50px;
+		font-size: 60px;
+		margin-top: 50px;
+		margin-left: 0px;
+	}
+
+	.stat-box {
+		width: 250px;
+		height: 250px;
+		margin: auto;
+	}
+	.stat-row1,
+	.stat-row2 {
+		margin-left: 35px;
+	}
+
+	.stat-number {
+		font-size: 80px;
+	}
+
+	.stat-text {
+		font-size: 35px;
+	}
+
+	.stat-mobile-screen {
+		display: none;
+	}
+}
+
+@media (min-width: 1001px) {
 	.stat-mobile-screen {
 		display: none;
 	}
