--- a/frontend/src/Components/Thoughts/Thoughts.css
+++ b/frontend/src/Components/Thoughts/Thoughts.css
@@ -99,12 +99,48 @@
 	}
 }
 
-@media (min-width: 501px) {
+@media (min-width: 1001px) {
 	.info {
 		position: absolute;
 		top: 25%;
 	}
 	.th-mobile-screen {
 		display: none;
+	}
+}
+
+@media (min-width: 501px) and (max-width: 1000px) {
+	.info {
+		position: absolute;
+		top: 25%;
+	}
+	.th-mobile-screen {
+		display: none;
+	}
+	.th-header {
+		width: 100vw;
+		height: 50px;
+		font-size: 60px;
+		margin-top: -850px;
+		margin-left: 0px;
+	}
+
+	.th-img {
+		width: 200px;
+		height: 200px;
+		border-radius: 100%;
+		margin-left: 20px;
+	}
+
+	.th-text {
+		margin-left: -130px;
+	}
+
+	.info {
+		width: 500px;
+		text-align: center;
+		font-size: 20px;
+		margin-left: 20px;
+		margin-top: -40px;
 	}
 }
