--- a/frontend/src/Components/TopWave/TopWave.css
+++ b/frontend/src/Components/TopWave/TopWave.css
@@ -170,7 +170,25 @@
 	}
 }
 
-@media (min-width: 501px) {
+@media (min-width: 501px) and (max-width: 1000px) {
+	.wave-text {
+		padding-left: 50px;
+	}
+	.wave-text3 {
+		width: 499px;
+		float: left;
+	}
+
+	.wave-text4 {
+		width: 313px;
+		float: right;
+	}
+	.wave-session-mobile-screen {
+		display: none;
+	}
+}
+
+@media (min-width: 1001px) {
 	.wave-text3 {
 		width: 499px;
 		float: left;
