--- a/frontend/src/Components/TimeLine/TimeLine.css
+++ b/frontend/src/Components/TimeLine/TimeLine.css
@@ -34,12 +34,34 @@
 }
 
 */
-.item {
+@media (min-width:1700px){.item {
     display: grid;
     grid-template-areas: "time left-container mid-container right-container";
     grid-template-columns: 1fr 1fr 1fr 1fr;
     padding-top: 0;
 }
+}
+
+@media (max-width:1700px) {
+    .item {
+        display: grid;
+        grid-template-areas: "time left-container "
+        "mid-container right-container";
+        grid-template-columns: 1fr 1fr ;
+      }
+  }
+
+@media (max-width:1200px) {
+    .item {
+        display: grid;
+        grid-template-areas: "time" " left-container "
+        "mid-container "" right-container";
+        grid-template-columns:  1fr ;
+        
+      }
+  }
+
+
 .time {
     grid-area: time;
     width: 10vh;
@@ -86,6 +108,7 @@
 }
 .details-xm {
     padding: 1vh;
+    min-width: 10vh;
 }
 .type {
     display: flex;
@@ -100,6 +123,7 @@
     display: inline-block;
     font-size: 20px;
     border-radius: 24px;
+    min-width: 25vh;
     max-width: 25vh;
     margin: 2vh;
 }
