--- a/frontend/src/Components/AboutConference/AboutConference.css
+++ b/frontend/src/Components/AboutConference/AboutConference.css
@@ -1,24 +1,24 @@
 .header-conf {
-	width: 506px;
-	height: 94px;
-	font-size: 80px;
+	text-align: right;
+	font-size: 5vw;
 	font-weight: bold;
 	color: #464646;
 	font-family: "Raleway";
 	margin-top: 227px;
-	margin-left: 430px;
+	margin-right: 3vw;
+	float: right;
 }
 
 .text-conf {
-	width: 862px;
-	height: 480px;
 	font-size: 25px;
 	font-weight: 600;
 	color: #464646;
 	font-family: "Raleway";
-	margin-left: 66px;
 	margin-top: 88px;
 	text-align: justify;
+	float: right;
+	margin-left: 5vw;
+	margin-right: 3vw;
 }
 
 .grey-circle {
@@ -146,7 +146,7 @@
 	display: flex;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 825px) {
 	#about-conference {
 		position: relative;
 		padding-top: 480px;
@@ -204,7 +204,7 @@
 	}
 }
 
-@media (min-width: 501px) and (max-width: 1000px) {
+@media (min-width: 826px) and (max-width: 1300px) {
 	.header-conf {
 		margin-left: 0px;
 		font-size: 60px;
@@ -228,7 +228,7 @@
 	}
 }
 
-@media (min-width: 1001px) {
+@media (min-width: 1301px) {
 	.about-mobile-screen {
 		display: none;
 	}
