--- a/frontend/src/Components/Statistics/Statistics.css
+++ b/frontend/src/Components/Statistics/Statistics.css
@@ -2,7 +2,7 @@
 	color: #464646;
 	width: 621px;
 	height: 94px;
-	font-size: 5vw;
+	font-size: 8vh;
 	font-weight: bold;
 	font-family: "Raleway";
 	margin-top: 228px;
