--- a/frontend/src/Components/AboutConference/AboutConference.css
+++ b/frontend/src/Components/AboutConference/AboutConference.css
@@ -1,6 +1,6 @@
 .header-conf {
 	text-align: right;
-	font-size: 5vw;
+	font-size: 5vh;
 	font-weight: bold;
 	color: #464646;
 	font-family: "Raleway";
