--- a/frontend/src/Components/Sponsors/Sponsors.css
+++ b/frontend/src/Components/Sponsors/Sponsors.css
@@ -5,25 +5,25 @@
 }
 
 .spon-header {
-	width: 399px;
+	width: 100vw;
 	height: 94px;
 	color: #464646;
 	font-family: "Raleway";
-	font-size: 80px;
+	font-size: 8vh;
 	font-weight: bold;
-	margin-left: 753px;
 }
 
 .spon-name {
 	color: #464646;
 	font-family: "Raleway";
-	font-size: 50px;
+	font-size: 6vh;
 	font-weight: 600;
 }
 
 .spon-media-div {
 	display: flex;
-	margin-left: 132px;
+	margin: auto;
+	width: 100vw;
 }
 
 .spon-media-div2 {
@@ -55,24 +55,24 @@
 	}
 }
 
-@media screen and (min-width: 501px) and (max-width: 1000px) {
+@media screen and (min-width: 501px) and (max-width: 1100px) {
 	.spon-header {
 		width: 100vw;
 		height: 50px;
 		font-size: 60px;
 		margin-left: 0;
-		margin-top: -400px;
 	}
 	.spon-name {
 		font-size: 40px;
 		margin-top: 80px;
 	}
+
 	.spon-full-screen {
 		display: none;
 	}
 }
 
-@media (min-width: 1001px) {
+@media (min-width: 1101px) {
 	.spon-mobile-screen {
 		display: none;
 	}
