--- a/frontend/src/Components/TopWave/TopWave.css
+++ b/frontend/src/Components/TopWave/TopWave.css
@@ -1,7 +1,7 @@
 .wave-container2 {
 	position: relative;
 	width: 100%;
-	height: 840px;
+	height: 860px;
 	background: #3b1ac9;
 	margin-top: 109px;
 	overflow: hidden;
@@ -10,7 +10,7 @@
 }
 
 .wave-text {
-	padding-left: 141px;
+	padding-left: 2vw;
 	padding-top: 94px;
 	text-align: left;
 }
@@ -26,6 +26,7 @@
 	color: #ededed;
 	font-size: 60px;
 	font-weight: normal;
+	flex-wrap: wrap;
 	height: 70px;
 }
 
@@ -69,13 +70,17 @@
 }
 
 .wave-img {
-	padding-left: 186px;
+	margin: auto;
 	width: 497px;
 	height: 515px;
 	padding-top: 110px;
 }
 
 .wave-session-full-screen {
+	display: flex;
+}
+
+.wave-content {
 	display: flex;
 }
 
@@ -129,7 +134,7 @@
 	}
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1130px) {
 	.wave-text {
 		padding-left: 30px;
 		padding-top: 50px;
@@ -167,7 +172,21 @@
 	}
 }
 
-@media (min-width: 501px) and (max-width: 1000px) {
+@media (min-width: 1131px) and (max-width: 1400px) {
+	.wave-session-full-screen {
+		flex-wrap: wrap;
+	}
+	.wave-text5 {
+		width: 50vw;
+	}
+}
+
+@media (min-width: 1401px) and (max-width: 1700px) {
+	.wave-content {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas: "wave-text wave-img";
+	}
 	.wave-text {
 		padding-left: 50px;
 	}
