--- a/frontend/src/Components/Schedule/ProgrammeSection/Programme.css
+++ b/frontend/src/Components/Schedule/ProgrammeSection/Programme.css
@@ -1,6 +1,7 @@
 .programme {
     display: flex;
     flex-direction: column;
+    padding: 1vh 0 1vh 0;
 }
 
 .programme-title {
@@ -8,10 +9,10 @@
 }
 
 .date-container-left {
-    width: 15vh;
+    width: 5em;
     background-color: #efb822;
     display: inline-block;
-    font-size: 30px;
+    font-size: 60px;
     border-radius: 0 20vh 20vh 0;
     padding: 4vh;
 }
@@ -20,7 +21,7 @@
     width: 5em;
     background-color: #efb822;
     display: inline-block;
-    font-size: 30px;
+    font-size: 60px;
     border-radius: 20vh 0 0 20vh;
     padding: 4vh;
     margin-left: auto;
