--- a/frontend/src/Components/Schedule/SpeakersSection/SpeakersSection.css
+++ b/frontend/src/Components/Schedule/SpeakersSection/SpeakersSection.css
@@ -3,24 +3,70 @@
     flex-direction: column;
     align-items: center;
 }
-/*Title section*/
-.speakers-section-title {
+
+@media (min-width: 1400px) {
+    .speaker-item {
+        display: grid;
+        grid-template-areas: " left-container mid-container right-container";
+        grid-template-columns: 1fr 1fr 1fr;
+        padding-top: 0;
+        margin-top: 1vh;
+    }
 }
-/*Content section*/
-.speakers-section-content {
+
+@media (max-width: 1400px) {
+    .speaker-item {
+        display: grid;
+        grid-template-areas:
+            "time" " left-container "
+            "mid-container " " right-container";
+        grid-template-columns: 1fr;
+        margin-top: 1vh;
+    }
 }
-.speakers-section-content-row {
+
+.photo-l {
+    border-radius: 30px;
+    margin: 5vh;
+    text-align: center;
 }
-/*Item section*/
-.speakers-section-item {
+.photo-l img {
+    border-radius: 30px;
+    height: auto;
+    max-width: 100%;
 }
-.speakers-section-item-photo {
+
+/* .photo-r {
+    border: 4px solid #707070;
+    border-radius: 30px;
+    border-radius: 30px;
+    margin: 5vh;
+} */
+
+.speaker-description {
+    border: 4px solid #707070;
+    border-radius: 30px;
+    margin: 5vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    max-width: 50vh;
 }
-.speakers-section-item-text {
+
+.description-title {
+    padding: 1vh;
+    text-align: left;
+    font-size: 32px;
 }
-.speakers-section-item-text-name {
+.description-sub-title {
+    padding: 1vh;
+    text-align: left;
+    font-size: 15px;
+    font-style: italic;
 }
-.speakers-section-item-text-subdescription {
-}
-.speakers-section-item-text-description {
+.description-content {
+    padding: 1vh;
+    text-align: left;
+    font-size: 20px;
 }
