--- a/frontend/src/Components/TimeLine/TimeLine.css
+++ b/frontend/src/Components/TimeLine/TimeLine.css
@@ -34,33 +34,45 @@
 }
 
 */
-@media (min-width:1700px){.item {
-    display: grid;
-    grid-template-areas: "time left-container mid-container right-container";
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding-top: 0;
-}
-}
-
-@media (max-width:1700px) {
+@media (min-width: 1700px) {
     .item {
         display: grid;
-        grid-template-areas: "time left-container "
-        "mid-container right-container";
-        grid-template-columns: 1fr 1fr ;
-      }
-  }
+        grid-template-areas: "time left-container mid-container right-container";
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        padding-top: 0;
+        margin-top: 1vh;
+    }
+    .item-coffee {
+        display: grid;
+        grid-template-areas: "time coffee";
+        grid-template-columns: 1fr 3fr;
+        padding-top: 0;
+        margin-top: 1vh;
+    }
+}
 
-@media (max-width:1200px) {
+@media (max-width: 1700px) {
     .item {
         display: grid;
-        grid-template-areas: "time" " left-container "
-        "mid-container "" right-container";
-        grid-template-columns:  1fr ;
-        
-      }
-  }
+        grid-template-areas:
+            "time empty-top "
+            "left-container mid-container"
+            "right-container empty-bottom";
+        grid-template-columns: 1fr 1fr;
+        margin-top: 1vh;
+    }
+}
 
+@media (max-width: 1200px) {
+    .item {
+        display: grid;
+        grid-template-areas:
+            "time" " left-container "
+            "mid-container " " right-container";
+        grid-template-columns: 1fr;
+        margin-top: 1vh;
+    }
+}
 
 .time {
     grid-area: time;
@@ -101,6 +113,7 @@
 .speaker-name {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 .details-sm {
     padding: 1vh;
@@ -113,6 +126,7 @@
 .type {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 .btn-find-out-more {
     text-align: center;
@@ -129,4 +143,31 @@
 }
 .description-text {
     padding: 2vh;
+}
+
+.coffee-break {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: rgba(174, 98, 34, 0.43);
+    border-radius: 30px;
+    margin: 5vh;
+}
+
+.coffee-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2vh;
+}
+
+.coffee-logo img {
+    height: 10vh;
+}
+.coffee-break-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2vh;
+    font-size: 50px;
 }
