--- a/frontend/src/Components/Thoughts/Thoughts.css
+++ b/frontend/src/Components/Thoughts/Thoughts.css
@@ -1,6 +1,6 @@
 .th-header {
 	color: #464646;
-	font-size: 8vh;
+	font-size: 60px;
 	font-weight: bold;
 	font-family: "Raleway";
 	width: 100vw;
@@ -29,7 +29,7 @@
 	width: 200px;
 	height: 200px;
 	border-radius: 100%;
-	margin-left: 140px;
+	margin-left: 2vw;
 }
 
 .th-text {
@@ -40,6 +40,7 @@
 .name {
 	font-size: 25px;
 	font-weight: 600;
+	text-align: center;
 }
 
 .descp {
@@ -50,102 +51,58 @@
 }
 
 .info {
-	width: 60vw;
 	text-align: justify;
-	font-size: 2.5vh;
+	font-size: 22px;
 	font-weight: medium;
-	margin-left: 100px;
+	margin-left: 4vw;
+	margin-top: 30px;
 }
 
 .th-box-name-descp {
-	width: 230px;
+	width: 20vw;
 	height: 60px;
 	margin-top: 16px;
-	margin-left: 140px;
+	margin-left: 2vw;
 	margin-bottom: 86px;
+}
+.left {
+}
+.right {
+}
+.th-content {
+	display: flex;
+	flex-direction: column;
 }
 
 @media (max-width: 500px) {
-	#thoughts {
-		position: relative;
-		padding-top: 400px;
-		margin-top: -350px;
+	.th-content {
+		flex-wrap: wrap;
 	}
-
-	.th-header {
+	.name {
 		width: 100vw;
-		height: 50px;
-		font-size: 45px;
-		margin-top: -950px;
-		margin-left: 0px;
+		text-align: center;
+	}
+	.descp {
+		width: 100vw;
+		text-align: center;
 	}
 
 	.th-img {
-		width: 200px;
-		height: 200px;
-		border-radius: 100%;
-		margin-left: 20px;
+		margin-top: 40px;
 	}
-
-	.th-text {
-		margin-left: -130px;
-	}
-
-	.info {
-		width: 320px;
-		text-align: center;
-		font-size: 20px;
-		margin-left: 20px;
-		margin-top: -40px;
-	}
-
-	.th-full-screen {
-		display: none;
+	.th-box-name-descp {
+		margin-bottom: 10px;
 	}
 }
 
-@media (min-width: 1001px) {
-	.info {
-		position: absolute;
-		top: 25%;
-	}
-	.th-mobile-screen {
-		display: none;
-	}
-}
-
-@media (min-width: 501px) and (max-width: 1000px) {
-	.info {
-		position: absolute;
-		top: 25%;
-	}
-	.th-mobile-screen {
-		display: none;
-	}
-	.th-header {
-		width: 100vw;
-		height: 50px;
-		font-size: 60px;
-		margin-top: -850px;
-		margin-left: 0px;
-	}
-
-	.th-img {
-		width: 200px;
-		height: 200px;
-		border-radius: 100%;
-		margin-left: 20px;
-	}
-
-	.th-text {
-		margin-left: -130px;
+@media (min-width: 501px) and (max-width: 1700px) {
+	.th-content {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas: "left right";
 	}
 
 	.info {
-		width: 500px;
-		text-align: center;
-		font-size: 20px;
-		margin-left: 20px;
-		margin-top: -40px;
+		margin-right: 30px;
 	}
 }
