--- a/frontend/src/Components/Sponsors/Sponsors.css
+++ b/frontend/src/Components/Sponsors/Sponsors.css
@@ -20,60 +20,78 @@
 	font-weight: 600;
 }
 
+.image img {
+	width: 30vw;
+	margin-right: 1vw;
+}
 .spon-media-div {
-	display: flex;
-	margin: auto;
-	width: 100vw;
+	display: table;
+	margin-left: 3vw;
+}
+
+.image {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .spon-media-div2 {
+	display: table;
+	margin-left: 3vw;
+}
+
+.spon-first-row {
 	display: flex;
-	margin-left: 132px;
-	margin-top: 78px;
+	margin-top: 15vh;
+	width: 100vw;
+}
+.org {
+	width: 50vw;
+}
+.strat {
+	width: 50vw;
 }
 
 @media (max-width: 500px) {
 	#sponsors {
 		position: relative;
-		margin-top: -900px;
-		padding-top: 900px;
+		margin-top: -1000px;
+		padding-top: 950px;
 	}
 	.spon-header {
 		width: 100vw;
 		height: 50px;
 		font-size: 45px;
 		margin-left: 0;
-		margin-top: -400px;
+		margin-top: -300px;
 	}
 	.spon-name {
 		font-size: 30px;
-		margin-top: 40px;
 	}
 
-	.spon-full-screen {
-		display: none;
+	.spon-media-div {
+		display: flex;
+		flex-direction: column;
 	}
-}
+	.spon-media-div2 {
+		display: flex;
+		flex-direction: column;
+	}
+	.image {
+		margin-top: 5vh;
+	}
+	.image img {
+		width: 60vw;
+	}
 
-@media screen and (min-width: 501px) and (max-width: 1100px) {
-	.spon-header {
+	.spon-first-row {
+		flex-direction: column;
+		margin-top: 5vh;
+	}
+	.strat {
+		margin-top: 10vh;
 		width: 100vw;
-		height: 50px;
-		font-size: 60px;
-		margin-left: 0;
 	}
-	.spon-name {
-		font-size: 40px;
-		margin-top: 80px;
-	}
-
-	.spon-full-screen {
-		display: none;
-	}
-}
-
-@media (min-width: 1101px) {
-	.spon-mobile-screen {
-		display: none;
+	.org {
+		width: 100vw;
 	}
 }
