--- a/frontend/src/Components/Schedule/TopWaveSection/TopWave.css
+++ b/frontend/src/Components/Schedule/TopWaveSection/TopWave.css
@@ -1,27 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
-.wave-container {
-    position: relative;
-    width: 100%;
-    height: 50vh;
-    background: #e9bd75;
-    overflow: hidden;
-    color: #464646;
-    font-family: "Raleway", sans-serif;
+.wave-logo {
+    border-radius: 30px;
+    margin: 5vh;
+    text-align: center;
 }
-
-.wave-text-small {
-    padding-top: 15vh;
-    padding-left: 20vh;
-    font-size: 23px;
-}
-.wave-text-big {
-    padding-top: 1vh;
-    padding-left: 20vh;
-    font-size: 60px;
-}
-
-.wave-text {
+.wave-logo img {
+    border-radius: 30px;
+    height: auto;
+    max-width: 100%;
 }
 
 /* Waves styling and waves animations */
@@ -74,5 +61,77 @@
     }
     100% {
         background-position-x: -1000px;
+    }
+}
+
+/*Responsiveness*/
+@media (min-width: 1400px) {
+    .wave-item {
+        display: grid;
+        grid-template-areas: " left-container right-container";
+        grid-template-columns: 1fr 1fr;
+        padding-top: 0;
+        margin-top: 1vh;
+    }
+
+    .wave-container {
+        position: relative;
+        width: 100%;
+        height: 50vh;
+        background: #efb822;
+        overflow: hidden;
+        color: #464646;
+        font-family: "Raleway", sans-serif;
+    }
+}
+
+@media (max-width: 1400px) {
+    .wave-item {
+        display: grid;
+        grid-template-areas:
+            " left-container "
+            " right-container";
+        grid-template-columns: 1fr;
+        margin-top: 1vh;
+    }
+    .wave-container {
+        position: relative;
+        width: 100%;
+        height: 70vh;
+        background: #efb822;
+        overflow: hidden;
+        color: #464646;
+        font-family: "Raleway", sans-serif;
+    }
+}
+
+@media (min-width: 700px) {
+    .wave-text-small {
+        font-size: 23px;
+    }
+    .wave-text-big {
+        font-size: 60px;
+    }
+
+    .wave-text {
+        padding: 5% 0 0 20%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
+@media (max-width: 700px) {
+    .wave-text-small {
+        font-size: 20px;
+    }
+    .wave-text-big {
+        font-size: 50px;
+    }
+
+    .wave-text {
+        padding: 5% 0 0 10%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
 }
