--- a/frontend/src/Components/FirstPage/Sponsors/Sponsors.css
+++ b/frontend/src/Components/FirstPage/Sponsors/Sponsors.css
@@ -11,6 +11,7 @@
 	font-family: "Raleway";
 	font-size: 8vh;
 	font-weight: bold;
+	text-align: center;
 }
 
 .spon-name {
@@ -18,6 +19,7 @@
 	font-family: "Raleway";
 	font-size: 6vh;
 	font-weight: 600;
+	text-align: center;
 }
 
 .image img {
@@ -26,7 +28,13 @@
 }
 .spon-media-div {
 	display: table;
-	margin-left: 3vw;
+	width: 100vw;
+	text-align: center;
+}
+
+.spon-partners-div{
+	width: 100vw;
+	text-align: center;
 }
 
 .image {
@@ -36,12 +44,14 @@
 
 .spon-media-div2 {
 	display: table;
-	margin-left: 3vw;
+	width: 100vw;
+	text-align: center;
 }
 
 .spon-first-row {
 	display: flex;
 	margin-top: 15vh;
+	text-align: center;
 	width: 100vw;
 }
 .org {
@@ -54,8 +64,7 @@
 @media (max-width: 500px) {
 	#sponsors {
 		position: relative;
-		margin-top: -1000px;
-		padding-top: 950px;
+		padding-top: 450px;
 	}
 	.spon-header {
 		width: 100vw;
