--- a/frontend/src/Components/FirstPage/Statistics/Statistics.css
+++ b/frontend/src/Components/FirstPage/Statistics/Statistics.css
@@ -1,12 +1,17 @@
+#statistics{
+	position: relative;
+	padding-top: 200px;
+}
+
 .stat-header {
 	color: #464646;
-	width: 621px;
-	height: 94px;
+	width: 100vw;
 	font-size: 8vh;
 	font-weight: bold;
 	font-family: "Raleway";
 	margin-top: 228px;
-	margin-left: 650px;
+	text-align: center;
+	
 }
 
 .stat-box {
@@ -37,12 +42,14 @@
 	font-size: 13vh;
 	height: 13vh;
 	margin-top: 3vh;
+	text-align: center;
 	margin-bottom: 3vh;
 }
 
 .stat-text {
 	font-weight: 600;
 	font-size: 55px;
+	text-align: center;
 	color: white;
 }
 .yellow {
@@ -59,8 +66,8 @@
 @media (max-width: 825px) {
 	#statistics {
 		position: relative;
-		margin-top: -400px;
-		padding-top: 400px;
+		padding-top:100px;
+		margin-top:-100px;
 	}
 	.stat-header {
 		width: 100vw;
@@ -75,14 +82,16 @@
 		background-color: #2f0ac3;
 		border: 1px solid #707070;
 		border-radius: 50px;
-		margin-right: 99px;
 		margin-top: 40px;
+		text-align: center;
+
 	}
 
 	.stat-number {
 		font-weight: bold;
 		font-size: 60px;
 		height: 165px;
+		text-align: center;
 	}
 
 	.stat-text {
@@ -97,9 +106,10 @@
 
 	.stat-mobile-screen {
 		display: flex;
-		flex-direction: column;
+		flex-wrap: wrap;
+		margin:auto;
 		align-items: center;
-		margin-left: 25%;
+		justify-content: center;
 	}
 }
 
@@ -109,7 +119,7 @@
 		height: 50px;
 		font-size: 60px;
 		margin-top: 50px;
-		margin-left: 0px;
+	margin-left: 0px;
 	}
 
 	.stat-box {
