--- a/frontend/src/Components/FirstPage/Thoughts/Thoughts.css
+++ b/frontend/src/Components/FirstPage/Thoughts/Thoughts.css
@@ -1,5 +1,7 @@
 #thoughts {
 	overflow: hidden;
+	position: relative;
+padding-top: 100px;
 }
 
 .th-header {
@@ -8,6 +10,7 @@
 	font-weight: bold;
 	font-family: "Raleway";
 	width: 100vw;
+	text-align: center;
 	height: 94px;
 }
 
@@ -16,7 +19,6 @@
 	height: 843px;
 	border-radius: 100%;
 	background-color: rgba(206, 203, 216, 0.35);
-	margin-top: 177px;
 	margin-left: -75px;
 }
 
@@ -74,16 +76,28 @@
 }
 .left {
 	width: 30vw;
+	text-align: center;
 }
 .right {
-	width: 70vw;
+	width: 60vw;
+	margin-right: 10vw;
+
 }
 .th-content {
 	display: flex;
 	flex-direction: column;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 900px) {
+	#thoughts{
+		position: relative;
+		padding-top:50px;
+		margin-top:-10px;
+	}
+
+	.th-header{
+		margin-top:0;
+	}
 	.th-content {
 		flex-wrap: wrap;
 	}
@@ -97,7 +111,10 @@
 	}
 
 	.info {
-		margin-right: 2vw;
+		margin-right: 10vw;
+		margin-left: 10vw;
+		text-align: center;
+
 	}
 	.th-img {
 		margin-top: 40px;
@@ -110,11 +127,14 @@
 	}
 	.right {
 		width: 100vw;
-		margin-right: 2vw;
+	}
+
+	.grey-circle3{
+		margin-top: 0;
 	}
 }
 
-@media (min-width: 501px) and (max-width: 1700px) {
+@media (min-width: 901px) and (max-width: 1700px) {
 	.th-content {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
