--- a/frontend/src/Components/FirstPage/TopWaveMain/TopWaveMain.css
+++ b/frontend/src/Components/FirstPage/TopWaveMain/TopWaveMain.css
@@ -92,8 +92,10 @@
 	left: 0;
 	width: 100%;
 	height: 100px;
-	background: url(../../Assets/wave.png);
+	background: url(../../../Assets/wave.png);
 	background-size: 1000px 100px;
+	z-index: 1;
+
 }
 .wave1 {
 	animation: animate 30s linear infinite;
