--- a/frontend/src/Components/Schedule/TopWaveSection/TopWave.css
+++ b/frontend/src/Components/Schedule/TopWaveSection/TopWave.css
@@ -2,13 +2,12 @@
 
 .wave-logo {
     border-radius: 30px;
-    margin: 5vh;
+    margin-top: 130px;
     text-align: center;
 }
 .wave-logo img {
     border-radius: 30px;
-    height: auto;
-    max-width: 100%;
+    height: 60vh;
 }
 
 /* Waves styling and waves animations */
@@ -71,17 +70,19 @@
         grid-template-areas: " left-container right-container";
         grid-template-columns: 1fr 1fr;
         padding-top: 0;
-        margin-top: 1vh;
+        margin-top: 2vh;
     }
 
     .wave-container {
         position: relative;
         width: 100%;
-        height: 50vh;
+        height: 90vh;
         background: #efb822;
         overflow: hidden;
         color: #464646;
         font-family: "Raleway", sans-serif;
+        padding-bottom:  50px;
+
     }
 }
 
@@ -91,18 +92,21 @@
         grid-template-areas:
             " left-container "
             " right-container";
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         margin-top: 1vh;
     }
     .wave-container {
         position: relative;
         width: 100%;
-        height: 70vh;
+        height: 80vh;
         background: #efb822;
         overflow: hidden;
         color: #464646;
         font-family: "Raleway", sans-serif;
+        padding-bottom:  100px;
+
     }
+
 }
 
 @media (min-width: 700px) {
@@ -121,17 +125,33 @@
     }
 }
 @media (max-width: 700px) {
+    .wave-item {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 120px;
+    }
     .wave-text-small {
         font-size: 20px;
+        text-align: center;
+
     }
     .wave-text-big {
         font-size: 50px;
+        text-align: center;
+
     }
 
     .wave-text {
-        padding: 5% 0 0 10%;
-        display: flex;
+        width: 100vw;
+    }
+
+    .wave-logo{
+        width: 100vw;
+    }
+    .wave-logo img{
+        height:50vw;
         justify-content: center;
-        flex-direction: column;
+        align-items: center;
+        margin-top: -100px;
     }
 }
