--- a/frontend/src/Components/FirstPage/Sponsors/Sponsors.css
+++ b/frontend/src/Components/FirstPage/Sponsors/Sponsors.css
@@ -9,7 +9,7 @@
 	height: 94px;
 	color: #464646;
 	font-family: "Raleway";
-	font-size: 8vh;
+	font-size: 4vw;
 	font-weight: bold;
 	text-align: center;
 }
@@ -17,7 +17,7 @@
 .spon-name {
 	color: #464646;
 	font-family: "Raleway";
-	font-size: 6vh;
+	font-size: 3vw;
 	font-weight: 600;
 	text-align: center;
 }
