--- a/frontend/src/Components/FirstPage/Statistics/Statistics.css
+++ b/frontend/src/Components/FirstPage/Statistics/Statistics.css
@@ -1,15 +1,16 @@
 #statistics{
 	position: relative;
-	padding-top: 200px;
+	padding-top: 150px;
+	margin-top:-50px;
 }
 
 .stat-header {
 	color: #464646;
 	width: 100vw;
-	font-size: 8vh;
+	font-size: 4vw;
 	font-weight: bold;
 	font-family: "Raleway";
-	margin-top: 228px;
+	margin-top: 0px;
 	text-align: center;
 	
 }
@@ -39,7 +40,7 @@
 .stat-number {
 	font-weight: bold;
 	color: white;
-	font-size: 13vh;
+	font-size: 5.5vw;
 	height: 13vh;
 	margin-top: 3vh;
 	text-align: center;
@@ -48,7 +49,7 @@
 
 .stat-text {
 	font-weight: 600;
-	font-size: 55px;
+	font-size: 3vw;
 	text-align: center;
 	color: white;
 }
@@ -113,37 +114,7 @@
 	}
 }
 
-@media (min-width: 826px) and (max-width: 1700px) {
-	.stat-header {
-		width: 100vw;
-		height: 50px;
-		font-size: 60px;
-		margin-top: 50px;
-	margin-left: 0px;
-	}
 
-	.stat-box {
-		margin: auto;
-	}
-	.stat-row1,
-	.stat-row2 {
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-areas: "stat-box stat-box stat-box";
-	}
-
-	.stat-number {
-		font-size: 80px;
-	}
-
-	.stat-text {
-		font-size: 35px;
-	}
-
-	.stat-mobile-screen {
-		display: none;
-	}
-}
 
 @media (min-width: 1001px) {
 	.stat-mobile-screen {
