--- a/frontend/src/Components/FirstPage/Thoughts/Thoughts.css
+++ b/frontend/src/Components/FirstPage/Thoughts/Thoughts.css
@@ -1,12 +1,11 @@
 #thoughts {
 	overflow: hidden;
 	position: relative;
-padding-top: 100px;
 }
 
 .th-header {
 	color: #464646;
-	font-size: 60px;
+	font-size: 4vw;
 	font-weight: bold;
 	font-family: "Raleway";
 	width: 100vw;
@@ -44,14 +43,14 @@ padding-top: 100px;
 }
 
 .name {
-	font-size: 25px;
+	font-size: 1.5vw;
 	font-weight: 600;
 	text-align: center;
 	width: 30vw;
 }
 
 .descp {
-	font-size: 25px;
+	font-size: 1.2vw;
 	font-weight: medium;
 	font-style: italic;
 	margin-bottom: 86px;
@@ -61,7 +60,7 @@ padding-top: 100px;
 
 .info {
 	text-align: justify;
-	font-size: 22px;
+	font-size: 1.3vw;
 	font-weight: medium;
 	margin-left: 2vw;
 	margin-top: 30px;
@@ -97,6 +96,8 @@ padding-top: 100px;
 
 	.th-header{
 		margin-top:0;
+		width:100vw;
+		font-size: 45px;
 	}
 	.th-content {
 		flex-wrap: wrap;
@@ -104,17 +105,20 @@ padding-top: 100px;
 	.name {
 		width: 100vw;
 		text-align: center;
+		font-size: 6vw;
+
 	}
 	.descp {
 		width: 100vw;
 		text-align: center;
+		font-size: 4vw;
 	}
 
 	.info {
 		margin-right: 10vw;
 		margin-left: 10vw;
 		text-align: center;
-
+		font-size: 3vw;
 	}
 	.th-img {
 		margin-top: 40px;
