--- a/frontend/src/Components/FirstPage/TopWaveMain/TopWaveMain.css
+++ b/frontend/src/Components/FirstPage/TopWaveMain/TopWaveMain.css
@@ -1,9 +1,9 @@
 .wave-container2 {
 	position: relative;
 	width: 100%;
-	height: 860px;
+	height: 90vh;
 	background: #3b1ac9;
-	margin-top: 109px;
+	margin-top: 80px;
 	overflow: hidden;
 	color: white;
 	font-family: "Raleway", sans-serif;
@@ -11,12 +11,12 @@
 
 .wave-text {
 	padding-left: 2vw;
-	padding-top: 94px;
 	text-align: left;
+	margin-top: -50px;
 }
 
 .wave-text1 {
-	font-size: 23px;
+	font-size: 1.2vw;
 	color: #f4cd57;
 	font-weight: 600;
 }
@@ -24,45 +24,42 @@
 .wave-text2 {
 	padding-top: 27px;
 	color: #ededed;
-	font-size: 60px;
+	font-size: 3vw;
 	font-weight: normal;
 	flex-wrap: wrap;
 	height: 70px;
 }
 
 .wave-text3 {
-	height: 165px;
-	font-size: 140px;
+	font-size: 7vw;
 	font-weight: normal;
 	color: #ededed;
-	padding-right: 50px;
 }
 
 .wave-text4 {
-	height: 165px;
-	font-size: 140px;
+	font-size: 7vw;
 	font-weight: bold;
 	color: #efb822;
+	margin-left: -70px;
 }
 
 .wave-text5 {
 	height: 52px;
 	width: 707px;
-	font-size: 22px;
+	font-size: 1.4vw;
 	font-weight: normal;
 	color: #ededed;
 	padding-top: 27px;
 }
 
 .wave-button {
-	width: 580px;
-	height: 66px;
 	background-color: #dc7241;
 	border-radius: 38px;
 	border: 1px solid #707070;
 	color: white;
 	font-weight: medium;
-	font-size: 28px;
+	font-size: 1.5vw;
+	padding: 20px 150px 20px 150px;
 }
 
 .wave-button:hover {
@@ -73,7 +70,7 @@
 	margin: auto;
 	width: 497px;
 	height: 515px;
-	padding-top: 110px;
+	padding-top: 30px;
 }
 
 .wave-session-full-screen {
@@ -139,7 +136,7 @@
 @media (max-width: 1130px) {
 	.wave-text {
 		padding-left: 30px;
-		padding-top: 50px;
+		padding-top: 70px;
 	}
 
 	.wave-text1 {
@@ -147,26 +144,27 @@
 	}
 
 	.wave-text2 {
-		font-size: 30px;
+		font-size:7vw;
 	}
 	.wave-text3 {
-		font-size: 90px;
+		font-size: 15vw;
 		margin-top: -30px;
 	}
 	.wave-text4 {
-		font-size: 90px;
-		margin-top: -60px;
+		font-size: 15vw;
+		margin-left: 1vw;
+
 	}
 	.wave-text5 {
-		width: 92vw;
-		margin-top: -60px;
+		width:80vw;
+		font-size: 3vw;
 	}
 
 	.wave-button {
-		margin-top: 100px;
-		width: 85vw;
-		height: 50px;
-		font-size: 25px;
+		margin-top: 0px;
+		padding-left: 20vw;
+		padding-right: 20vw;
+		font-size: 4.5vw;
 	}
 
 	.wave-session-full-screen {
