--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
 .top-nav {
-	height: 109px;
+	height: 80px;
 	width: 100vw;
 	position: fixed;
 	top: 0;
@@ -29,7 +29,7 @@
 	text-decoration: none;
 	color: #707070;
 	display: inline-block;
-	font-size: 30px;
+	font-size: 1.5vw;
 	padding-right: 30px;
 	font-family: "Raleway", sans-serif;
 	font-weight: 400;
