--- a/frontend/src/Components/FirstPage/Thoughts/Thoughts.css
+++ b/frontend/src/Components/FirstPage/Thoughts/Thoughts.css
@@ -138,7 +138,7 @@
 	}
 }
 
-@media (min-width: 901px) and (max-width: 1700px) {
+@media (min-width: 901px) {
 	.th-content {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
@@ -149,3 +149,4 @@
 		margin-right: 30px;
 	}
 }
+
